app/styles/addon-overrides/_ember-rdfa-editor.scss
/* ==========================================================================
   ember-rdfa-editor
   ========================================================================== */

// Variables

$say-paper: false;
$say-paper-sidebar: false;
$say-editor-background: white;
$say-toolbar-background: white;
$say-editor-padding: 1rem;
// $say-font: $auk-font-sans-family; // Currently the default editor fonts (https://github.com/lblod/ember-rdfa-editor/blob/039156d2f4d4933551fbc31939bd8893a7d01211/app/styles/ember-rdfa-editor/_s-settings.scss#L26)


// @import 'ember-rdfa-editor/custom-components'; // This used to be the only import regarding the rdfa-editor styling but because we only use the basic functionality for the moment & we don't really need the deprecated styling from that package, we'll be only importing the necessary SCSS files (see below)

@import 'ember-rdfa-editor/c-container';
@import 'ember-rdfa-editor/c-dropdown';
@import 'ember-rdfa-editor/c-content';
@import 'ember-rdfa-editor/c-editor';
@import 'ember-rdfa-editor/c-icon';
@import 'ember-rdfa-editor/c-toolbar';
@import 'ember-rdfa-editor/c-table';
@import 'ember-rdfa-editor/shame';


// Overrides

// Custom typography
.say-content {
  &,
  p,
  ul,
  ol,
  div {
    @include au-font-size(1.8rem);
    font-family: BlinkMacSystemFont, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
  }
}

// Reduce height of inner
.say-container {
  height: 40rem;
  border: .1rem solid $auk-gray-300;
}

// This was not an option in the skinning, so hardcoded
.say-toolbar {
  border-bottom: .1rem solid $auk-gray-300;
}

// Fix spacing for lists
.say-editor {
  padding-left: 2rem;
}

// Disable display of toast hints (https://github.com/lblod/ember-rdfa-editor/issues/26)
.say-container__aside {
  display: none;
}

// Full screen
.auk-rdfa-holder {

}

.auk-rdfa-holder__header {
  .auk-rdfa-fullscreen & {
    padding: 1rem;
    flex-grow: 0;
  }
}


.auk-rdfa-fullscreen {
  position: fixed;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  top: .5rem;
  left: .5rem;
  height: calc(100% - 1rem);
  width: calc(100% - 1rem);
  z-index: 1;
  background-color: #fff;
  box-shadow: 0 0 6rem rgba(0,0,0,.8);

  > .ember-view {
    height: 100%;
    position: relative;
  }

  .say-container {
    height: calc(100vh - 6.5rem);
    border: 0;
    border-top: .1rem solid $auk-gray-300;
  }

  .say-editor__paper,
  .say-editor__inner {
    min-height: calc(100vh - 13.1rem);
  }

  .say-editor {
    padding-top: 3rem;
  }
}

